perf(concurrency): Use shared scheduler and virtual threads in HeartbeatMonitor and Bot
Replace per-connection ScheduledExecutorService (2 platform threads each) with a
single shared pool sized to availableProcessors. Switch Bot scheduler to a virtual
thread factory. Updates HeartbeatMonitorTest to verify behavioral state instead of
injecting the now-static scheduler via reflection.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>